@@ -571,5 +571,10 @@ S3method(print, multiphase)
 S3method(update, multiphase)
 S3method(subset, multiphase)
 S3method(weights, multiphase)
+S3method(svyglm, multiphase)
+S3method(degf, multiphase)
+S3method(svyvar, multiphase)
+S3method(dim, multiphase)
+S3method(dimnames, multiphase)
 
 S3method(withCrossval, svyrep.design)
