@@ -1,6 +1,6 @@
 
 multiphase<-function(ids, subset, strata, probs, data, fpc=NULL){
-    data<-survey:::detibble(data)
+    data<-detibble(data)
 
     phase1_no_weights<-if(probs[[1]]==~1) TRUE else FALSE
     
@@ -35,9 +35,9 @@ multiphase<-function(ids, subset, strata, probs, data, fpc=NULL){
         if (is.null(probs[[i]]))
             probs[[i]]<-compute_probs(str_i, id_i, this_subset)$allprob
         if (i==nphases)
-            htmats[[i]]<-survey:::Dcheck_multi(id_i[this_subset,,drop=FALSE], str_i[this_subset,,drop=FALSE], probs[[i]])
+            htmats[[i]]<-Dcheck_multi(id_i[this_subset,,drop=FALSE], str_i[this_subset,,drop=FALSE], probs[[i]])
         else 
-            htmats[[i]]<-survey:::Dcheck_multi_subset(id_i,str_i, this_subset, probs[[i]], withrep)
+            htmats[[i]]<-Dcheck_multi_subset(id_i,str_i, this_subset, probs[[i]], withrep)
 
     }
     ## might want to keep htmats[[i]] the same size as subsets$cumulative[[i]] 
@@ -98,7 +98,7 @@ subset.multiphase<-function(x,subset,...){
     warning("not ready yet")
   e <- substitute(subset)
   r <- eval(e, x$data, parent.frame())
-  r <- r & !is.na(r) ## need to handle structural NAs differently
+  r <- r & !is.na(r) ## ideally want to handle structural NAs differently
   x<-x[r,]
   x$call<-sys.call(-1)
   x
@@ -106,7 +106,7 @@ subset.multiphase<-function(x,subset,...){
 
 project_ps<-function(xc, psvar){
     if (is.null(psvar)) return(xc)
-    qr.resid(psvar$qr,x/psvar$g)*psvar$g
+    qr.resid(psvar$qr,xc/psvar$g)*psvar$g
 }
 
 multiphasevar<-function(x, weights, htmats, subsets, postStrata){
@@ -116,9 +116,9 @@ multiphasevar<-function(x, weights, htmats, subsets, postStrata){
     for(i in 1:nphases){
         this_phase<-subsets$cumulative[[i]]
         final_phase<-subsets$cumulative[[nphases]][this_phase]
-        xcheck<-(x[this_phase,,drop=FALSE]*weights[[i]])[final_phase,,drop=FALSE]
+        xcheck<-x*(weights[[i]][final_phase])
         gecheck<-project_ps(xcheck, postStrata[[i]])
-        Vi<- survey:::htvar.matrix(gecheck, htmats[[i]])
+        Vi<- htvar.matrix(gecheck, htmats[[i]])
         Vphases[[i]]<-Vi
         V<-V+Vi
     }
@@ -150,8 +150,7 @@ svytotal.multiphase<-function(x, design, na.rm=FALSE, ...){
         x[nas > 0, ] <- 0
     }
     nphases<-design$nphases
-    final_subset<-design$subsets$cumulative[[nphases]]
-    total <- colSums(x[final_subset,,drop=FALSE]*weights(design,"sampling"), na.rm = na.rm)
+    total <- colSums(x*weights(design,"sampling"), na.rm = na.rm)
     class(total) <- "svystat"
     attr(total, "var") <- multiphasevar(x, weights(design,"phase"),
                                              design$Dcheck, design$subsets,
@@ -169,11 +168,9 @@ svymean.multiphase<-function(x, design, na.rm=FALSE, ...){
         x[nas > 0, ] <- 0
     }
     nphases<-design$nphases
-    final_subset<-design$subsets$cumulative[[nphases]]
-
     weights <- weights(design,"sampling")
     psum <- sum(weights)
-    average <- colSums(x[final_subset,,drop=FALSE]*weights/psum, na.rm = na.rm)
+    average <- colSums(x*weights/psum, na.rm = na.rm)
     x <- sweep(x, 2, average)/psum
     class(average) <- "svystat"
     attr(average, "var") <- multiphasevar(x, weights(design,"phase"),
@@ -181,4 +178,68 @@ svymean.multiphase<-function(x, design, na.rm=FALSE, ...){
                                              design$postStrata)
     attr(average, "statistic") <- "mean"
     average
+}
+
+
+svyglm.multiphase<-function(formula, design, subset = NULL, family = stats::gaussian(), 
+                            start = NULL, influence=FALSE,...){
+    dfake<-svydesign(ids=~1,weights=weights(design),
+                     data=design$data[design$subsets$cumulative[[design$nphases]],])
+    g<-svyglm(formula,dfake,subset=subset, family=family,start=start,...,influence=TRUE)
+    infl<-attr(g,"influence")/weights(design)
+    g$cov.unscaled<- multiphasevar(infl, weights(design,"phase"),
+                      design$Dcheck, design$subsets,
+                      design$postStrata)
+    g$df.residual <- degf(design) + 1 - length(coef(g)[!is.na(coef(g))])
+    g$call <- match.call()
+    g$call[[1]] <- as.name(.Generic)
+    if (!("formula" %in% names(g$call))) {
+        if (is.null(names(g$call))) 
+            i <- 1
+        else i <- min(which(names(g$call)[-1] == ""))
+        names(g$call)[i + 1] <- "formula"
+    }
+    if (!influence) {
+        attr(g, "influence") <- NULL
+    }
+    g$survey.design <- design
+    g
+}
+
+
+degf.multiphase<-function (design, ...) 
+{
+    sum(design$subpop[,2],na.rm=TRUE)-1
+}
+
+
+svyvar.multiphase<-function (x, design, na.rm = FALSE, ...) 
+{
+    x <- multiphase_getdata(x, design)
+    n <- sum(weights(design)>0)
+    xbar <- svymean(x, design, na.rm = na.rm)
+    if (NCOL(x) == 1) {
+        if (n == 1) {
+            v <- NA
+            attr(v, "statistic") <- NA
+            attr(v, "var") <- NA
+            class(v) <- "svystat"
+            return(v)
+        }
+        x <- x - xbar
+        v <- svymean(x * x * n/(n - 1), design, na.rm = na.rm)
+        attr(v, "statistic") <- "variance"
+        return(v)
+    }
+    x <- t(t(x) - xbar)
+    p <- NCOL(x)
+    a <- matrix(rep(x, p), ncol = p * p)
+    b <- x[, rep(1:p, each = p)]
+    v <- svymean(a * b * n/(n - 1), design, na.rm = na.rm)
+    vv <- matrix(v, ncol = p)
+    dimnames(vv) <- list(names(xbar), names(xbar))
+    attr(vv, "var") <- attr(v, "var")
+    attr(vv, "statistic") <- "variance"
+    class(vv) <- c("svyvar", "svystat")
+    vv
 }
